[package]
name = "lez-signature-bench"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[workspace.package]
license = "MIT or Apache-2.0"

[workspace]
resolver = "3"
members = [
  ".",
  "methods",
  "methods/guest",
]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }

risc0-zkvm = { version = "3.0.5", features = ["std"] }
risc0-build = "3.0.5"

serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
sha2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "schnorr", "std"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }

[dependencies]
lez_signature_bench_methods = { path = "methods" }
nssa.workspace = true
nssa_core.workspace = true
wallet.workspace = true
common.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }

risc0-zkvm.workspace = true
serde.workspace = true
hex.workspace = true
k256 = { workspace = true, features = ["arithmetic"] }
p256 = { workspace = true, features = ["arithmetic"] }
ed25519-dalek.workspace = true
sha2.workspace = true
tiny-keccak.workspace = true
clap.workspace = true
tokio.workspace = true
bincode = "1.3"
serde_json.workspace = true
